--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1539,9 +1539,67 @@
  
             <div class="modal-body">
 <p>Work in progress - Various examples of completed T4 slips will be added to optimize user experience</p>
-             <a class="wb-lbx" href="images/ident.JPG" title="Identification">
+           <div class="wb-frmvld gc-font-2019">
+            <form>
+
+<div class="wb-fieldflow">
+	<p>Choose content to be ajaxed?</p>
+	<ul>
+		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-1", "live": true}'>1</li>
+      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-2", "live": true}'>2</li>
+      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3", "live": true}'>3</li>
+      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-4", "live": true}'>4</li>
+      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-5", "live": true}'>5</li>
+      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-6", "live": true}'>6</li>
+      
+	</ul>
+</div>
+  </form>
+          </div>
+
+<div id="results" class="mrgn-tp-lg" aria-live="polite">
+            <div id="ajax-1" class="hidden">
+              <h3>Add title</h3>
+                <a class="wb-lbx" href="images/ident.JPG" title="Identification">
                         <img src="images/ident.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
+            </div>
+
+ 	<div id="ajax-2" class="hidden">
+              <h3>Add title</h3>
+                <a class="wb-lbx" href="images/ident.JPG" title="Identification">
+                        <img src="images/ident.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
+                        </a>
+            </div>
+
+<div id="ajax-3" class="hidden">
+              <h3>Add title</h3>
+                <a class="wb-lbx" href="images/ident.JPG" title="Identification">
+                        <img src="images/ident.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
+                        </a>
+            </div>
+
+<div id="ajax-4" class="hidden">
+              <h3>Add title</h3>
+                <a class="wb-lbx" href="images/ident.JPG" title="Identification">
+                        <img src="images/ident.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
+                        </a>
+            </div>
+
+<div id="ajax-5" class="hidden">
+              <h3>Add title</h3>
+                <a class="wb-lbx" href="images/ident.JPG" title="Identification">
+                        <img src="images/ident.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
+                        </a>
+            </div>
+
+<div id="ajax-6" class="hidden">
+              <h3>Add title</h3>
+                <a class="wb-lbx" href="images/ident.JPG" title="Identification">
+                        <img src="images/ident.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
+                        </a>
+            </div>
+</div>
             </div>
             </section>  
 
