--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1560,43 +1560,43 @@
 <div id="results" class="mrgn-tp-lg" aria-live="polite">
             <div id="ajax-1" class="hidden">
               <h3>Add title</h3>
-                <a class="wb-lbx" href="images/ident.JPG" title="Identification">
-                        <img src="images/ident.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
+                <a class="wb-lbx" href="images/T4_Fisher.JPG" title="Identification">
+                        <img src="images/T4_Fisher.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
  	<div id="ajax-2" class="hidden">
               <h3>Add title</h3>
-                <a class="wb-lbx" href="images/ident.JPG" title="Identification">
-                        <img src="images/ident.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
+                <a class="wb-lbx" href="images/T4_Hairdresser.JPG" title="Identification">
+                        <img src="images/T4_Hairdresser.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
 <div id="ajax-3" class="hidden">
               <h3>Add title</h3>
-                <a class="wb-lbx" href="images/ident.JPG" title="Identification">
-                        <img src="images/ident.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
+                <a class="wb-lbx" href="images/T4_Agency.JPG" title="Identification">
+                        <img src="images/T4_Agency.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
 <div id="ajax-4" class="hidden">
               <h3>Add title</h3>
-                <a class="wb-lbx" href="images/ident.JPG" title="Identification">
-                        <img src="images/ident.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
+                <a class="wb-lbx" href="images/T4_deferral.JPG" title="Identification">
+                        <img src="images/T4_deferral.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
 <div id="ajax-5" class="hidden">
               <h3>Add title</h3>
-                <a class="wb-lbx" href="images/ident.JPG" title="Identification">
-                        <img src="images/ident.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
+                <a class="wb-lbx" href="images/T4_Indian_1.JPG" title="Identification">
+                        <img src="images/T4_Indian_1.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
 <div id="ajax-6" class="hidden">
               <h3>Add title</h3>
-                <a class="wb-lbx" href="images/ident.JPG" title="Identification">
-                        <img src="images/ident.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
+                <a class="wb-lbx" href="images/T4_Indian_2.JPG" title="Identification">
+                        <img src="images/T4_Indian_2.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 </div>
