--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1545,12 +1545,12 @@
 <div class="wb-fieldflow">
 	<p>Choose content to be ajaxed?</p>
 	<ul>
-		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-1", "live": true}'>1</li>
-      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-2", "live": true}'>2</li>
-      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3", "live": true}'>3</li>
-      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-4", "live": true}'>4</li>
-      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-5", "live": true}'>5</li>
-      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-6", "live": true}'>6</li>
+		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-1", "live": true}'>Self-employed fisher</li>
+      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-2", "live": true}'>Self-employed hairdresser</li>
+      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3", "live": true}'>Placement or employment agency workers</li>
+      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-4", "live": true}'>Prescribed salary deferral arrangement </li>
+      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-5", "live": true}'>Employee who is registered, or entitled to be registered under the Indian Act</li>
+      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-6", "live": true}'>Self-employed person who is registered, or entitled to be registered under the Indian Act</li>
       
 	</ul>
 </div>
