--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -279,7 +279,7 @@
 
             <h2 id="h-4">How to fill out</h2>
           <p><strong>Before you fill out the T4 slip, </strong>make sure to review the list of <a href="#special" aria-controls="centred-popup" class="wb-lbx" role="button">special situation&nbsp;<span class="far fa-question-circle"></span></a>.  You can filter by key words to find information specific to your situation.</p> 
-<p> &nbsp;&nbsp; <small><a href="#ident" aria-controls="centred-popup" class="wb-lbx" role="button"><span class="fas fa-eye text-muted"> </span> View examples of completed T4 slips in special situations</a></small></p> 
+<p> &nbsp;&nbsp; <small><a href="#ident" aria-controls="mid-screen" class="overlay-lnk" role="button"><span class="fas fa-eye text-muted"> </span> View examples of completed T4 slips in special situations</a></small></p> 
 
          
               <section class="mrgn-tp-md" id="details-elements">
@@ -1532,7 +1532,8 @@
 			</ul>
             </section>
 
- <section id="ident" class="mfp-hide modal-dialog modal-content overlay-def  modal-xl">
+ <section id="ident" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
+
                <header class="modal-header">
                   <h2 class="modal-title">View examples of completed T4 slips in special situations</h2>
                </header>
@@ -1559,42 +1560,42 @@
 
 <div id="results" class="mrgn-tp-lg" aria-live="polite">
             <div id="ajax-1" class="hidden">
-              <h3>Add title</h3>
+              <h3>Self-employed fisher</h3>
                 <a class="wb-lbx" href="images/T4_Fisher.JPG" title="Identification">
                         <img src="images/T4_Fisher.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
  	<div id="ajax-2" class="hidden">
-              <h3>Add title</h3>
+              <h3>Self-employed hairdresser</h3>
                 <a class="wb-lbx" href="images/T4_Hairdresser.JPG" title="Identification">
                         <img src="images/T4_Hairdresser.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
 <div id="ajax-3" class="hidden">
-              <h3>Add title</h3>
+              <h3>Placement or employment agency workers</h3>
                 <a class="wb-lbx" href="images/T4_Agency.JPG" title="Identification">
                         <img src="images/T4_Agency.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
 <div id="ajax-4" class="hidden">
-              <h3>Add title</h3>
+              <h3>Prescribed salary deferral arrangement</h3>
                 <a class="wb-lbx" href="images/T4_deferral.JPG" title="Identification">
                         <img src="images/T4_deferral.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
 <div id="ajax-5" class="hidden">
-              <h3>Add title</h3>
+              <h3>Employee who is registered, or entitled to be registered under the Indian Act</h3>
                 <a class="wb-lbx" href="images/T4_Indian_1.JPG" title="Identification">
                         <img src="images/T4_Indian_1.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
 <div id="ajax-6" class="hidden">
-              <h3>Add title</h3>
+              <h3>Self-employed person who is registered, or entitled to be registered under the Indian Act</h3>
                 <a class="wb-lbx" href="images/T4_Indian_2.JPG" title="Identification">
                         <img src="images/T4_Indian_2.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
