--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1539,12 +1539,12 @@
                </header>
  
             <div class="modal-body">
-<p>Work in progress - Various examples of completed T4 slips will be added to optimize user experience</p>
+<p>Make a selection and view examples based on the situation.</p>
            <div class="wb-frmvld gc-font-2019">
             <form>
 
-<div class="wb-fieldflow">
-	<p>Choose content to be ajaxed?</p>
+<div class="wb-fieldflow" data-wb-fieldflow='{"noForm": true}'>
+	<p>What is the special situation?</p>
 	<ul>
 		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-1", "live": true}'>Self-employed fisher</li>
       <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-2", "live": true}'>Self-employed hairdresser</li>
@@ -1560,21 +1560,21 @@
 
 <div id="results" class="mrgn-tp-lg" aria-live="polite">
             <div id="ajax-1" class="hidden">
-              <h3>Self-employed fisher</h3>
+              <h2>Self-employed fisher</h2>
                 <a class="wb-lbx" href="images/T4_Fisher.JPG" title="Identification">
                         <img src="images/T4_Fisher.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
  	<div id="ajax-2" class="hidden">
-              <h3>Self-employed hairdresser</h3>
+              <h2>Self-employed hairdresser</h2>
                 <a class="wb-lbx" href="images/T4_Hairdresser.JPG" title="Identification">
                         <img src="images/T4_Hairdresser.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
 <div id="ajax-3" class="hidden">
-              <h3>Placement or employment agency workers</h3>
+              <h2>Placement or employment agency workers</h2>
                 <a class="wb-lbx" href="images/T4_Agency.JPG" title="Identification">
                         <img src="images/T4_Agency.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
@@ -1588,14 +1588,14 @@
             </div>
 
 <div id="ajax-5" class="hidden">
-              <h3>Employee who is registered, or entitled to be registered under the Indian Act</h3>
+              <h2>Employee who is registered, or entitled to be registered under the Indian Act</h2>
                 <a class="wb-lbx" href="images/T4_Indian_1.JPG" title="Identification">
                         <img src="images/T4_Indian_1.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
 <div id="ajax-6" class="hidden">
-              <h3>Self-employed person who is registered, or entitled to be registered under the Indian Act</h3>
+              <h2>Self-employed person who is registered, or entitled to be registered under the Indian Act</h2>
                 <a class="wb-lbx" href="images/T4_Indian_2.JPG" title="Identification">
                         <img src="images/T4_Indian_2.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
