--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1539,11 +1539,11 @@
                </header>
  
             <div class="modal-body">
-<p>Make a selection and view examples based on the situation.</p>
+<p>Make a selection and view the example based on the situation.</p>
            <div class="wb-frmvld gc-font-2019">
             <form>
 
-<div class="wb-fieldflow" data-wb-fieldflow='{"noForm": true}'>
+<div class="wb-fieldflow" data-wb-fieldflow='{"noForm": true, "isoptional": true}'>
 	<p>What is the special situation?</p>
 	<ul>
 		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-1", "live": true}'>Self-employed fisher</li>
@@ -1560,21 +1560,24 @@
 
 <div id="results" class="mrgn-tp-lg" aria-live="polite">
             <div id="ajax-1" class="hidden">
-              <h2>Self-employed fisher</h2>
+              <h3>Self-employed fisher</h3>
+		    <br>
                 <a class="wb-lbx" href="images/T4_Fisher.JPG" title="Identification">
                         <img src="images/T4_Fisher.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
  	<div id="ajax-2" class="hidden">
-              <h2>Self-employed hairdresser</h2>
+              <h3>Self-employed hairdresser</h3>
+		<br>
                 <a class="wb-lbx" href="images/T4_Hairdresser.JPG" title="Identification">
                         <img src="images/T4_Hairdresser.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
 <div id="ajax-3" class="hidden">
-              <h2>Placement or employment agency workers</h2>
+              <h3>Placement or employment agency worker</h3>
+	<br>
                 <a class="wb-lbx" href="images/T4_Agency.JPG" title="Identification">
                         <img src="images/T4_Agency.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
@@ -1582,20 +1585,23 @@
 
 <div id="ajax-4" class="hidden">
               <h3>Prescribed salary deferral arrangement</h3>
+	<br>
                 <a class="wb-lbx" href="images/T4_deferral.JPG" title="Identification">
                         <img src="images/T4_deferral.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
 <div id="ajax-5" class="hidden">
-              <h2>Employee who is registered, or entitled to be registered under the Indian Act</h2>
+              <h3>Employee who is registered, or entitled to be registered under the Indian Act</h3>
+	<br>
                 <a class="wb-lbx" href="images/T4_Indian_1.JPG" title="Identification">
                         <img src="images/T4_Indian_1.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
 <div id="ajax-6" class="hidden">
-              <h2>Self-employed person who is registered, or entitled to be registered under the Indian Act</h2>
+              <h3>Self-employed person who is registered, or entitled to be registered under the Indian Act</h3>
+<br>
                 <a class="wb-lbx" href="images/T4_Indian_2.JPG" title="Identification">
                         <img src="images/T4_Indian_2.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
                         </a>
