--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -279,7 +279,7 @@
 
             <h2 id="h-4">How to fill out</h2>
           <p><strong>Before you fill out the T4 slip, </strong>make sure to review the list of <a href="#special" aria-controls="centred-popup" class="wb-lbx" role="button">special situation&nbsp;<span class="far fa-question-circle"></span></a>.  You can filter by key words to find information specific to your situation.</p> 
-<p> &nbsp;&nbsp; <small><a href="#ident" aria-controls="mid-screen" class="overlay-lnk" role="button"><span class="fas fa-eye text-muted"> </span> View examples of completed T4 slips in special situations</a></small></p> 
+<p> &nbsp;&nbsp; <a href="#ident" aria-controls="mid-screen" class="overlay-lnk" role="button"><span class="fas fa-eye text-muted"> </span> View examples of completed T4 slips in special situations</a></p> 
 
          
               <section class="mrgn-tp-md" id="details-elements">
@@ -1562,8 +1562,8 @@
             <div id="ajax-1" class="hidden">
               <h3>Self-employed fisher</h3>
 		    <br>
-                <a class="wb-lbx" href="images/T4_Fisher.JPG" title="Identification">
-                        <img src="images/T4_Fisher.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
+                <a class="wb-lbx" href="images/T4_Fisher.JPG" title="Self-employed fisher">
+                        <img src="images/T4_Fisher.JPG" alt="Self-employed fisher" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
@@ -1578,89 +1578,36 @@
 <div id="ajax-3" class="hidden">
               <h3>Placement or employment agency worker</h3>
 	<br>
-                <a class="wb-lbx" href="images/T4_Agency.JPG" title="Identification">
-                        <img src="images/T4_Agency.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
+                <a class="wb-lbx" href="images/T4_Agency.JPG" title="Placement or employment agency worker">
+                        <img src="images/T4_Agency.JPG" alt="Placement or employment agency worker" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
 <div id="ajax-4" class="hidden">
               <h3>Prescribed salary deferral arrangement</h3>
 	<br>
-                <a class="wb-lbx" href="images/T4_deferral.JPG" title="Identification">
-                        <img src="images/T4_deferral.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
+                <a class="wb-lbx" href="images/T4_deferral.JPG" title="Prescribed salary deferral arrangement">
+                        <img src="images/T4_deferral.JPG" alt="Prescribed salary deferral arrangement" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
 <div id="ajax-5" class="hidden">
               <h3>Employee who is registered, or entitled to be registered under the Indian Act</h3>
 	<br>
-                <a class="wb-lbx" href="images/T4_Indian_1.JPG" title="Identification">
-                        <img src="images/T4_Indian_1.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
+                <a class="wb-lbx" href="images/T4_Indian_1.JPG" title="Employee who is registered, or entitled to be registered under the Indian Act">
+                        <img src="images/T4_Indian_1.JPG" alt="Employee who is registered, or entitled to be registered under the Indian Act" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
 <div id="ajax-6" class="hidden">
               <h3>Self-employed person who is registered, or entitled to be registered under the Indian Act</h3>
 <br>
-                <a class="wb-lbx" href="images/T4_Indian_2.JPG" title="Identification">
-                        <img src="images/T4_Indian_2.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
+                <a class="wb-lbx" href="images/T4_Indian_2.JPG" title="Self-employed person who is registered, or entitled to be registered under the Indian Act">
+                        <img src="images/T4_Indian_2.JPG" alt="Self-employed person who is registered, or entitled to be registered under the Indian Act" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 </div>
             </div>
-            </section>  
-
- <section id="status" class="wb-overlay modal-content overlay-def wb-panel-r">
-            <header class="modal-header"><h2 class="modal-title">View sample - Status</h2></header>
-            <div class="modal-body">
-             <a class="wb-lbx" href="images/status.JPG" title="Status">
-                        <img src="images/status.JPG" alt="Status" class="img-responsive mrgn-bttm-lg" />
-                        </a>
-            </div>
-            </section>  
-
- <section id="income" class="mfp-hide modal-dialog modal-content overlay-def  modal-xl">
-            <header class="modal-header"><h2 class="modal-title">View sample - Income and deduction</h2></header>
-            <div class="modal-body">
-             <a class="wb-lbx" href="images/income.JPG" title="Income and deduction">
-                        <img src="images/income.JPG" alt="Income and deduction" class="img-responsive mrgn-bttm-lg" />
-                        </a>
-             </div>
-            </section>  
-
- <section id="cppqppppip" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
-            <header class="modal-header"><h2 class="modal-title">View sample - CPP, QPP and PPIP</h2></header>
-            <div class="modal-body">
-             <a class="wb-lbx" href="images/cppqppppip.JPG" title="CPP, QPP and PPIP">
-                        <img src="images/cppqppppip.JPG" alt="CPP, QPP and PPIP" class="img-responsive mrgn-bttm-lg" />
-                        </a>
-             </div>
-            </section>  
-
- <section id="ei" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
-            <header class="modal-header"><h2 class="modal-title">View sample - EI</h2></header>
-            <div class="modal-body">
-             <a class="wb-lbx" href="images/ei.JPG" title="EI">
-                        <img src="images/ei.JPG" alt="EI" class="img-responsive mrgn-bttm-lg" />
-                        </a>
-             </div>
-            </section>  
-
- <section id="rppdpsp" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
-            <header class="modal-header"><h2 class="modal-title">View sample - RPP or DPSP</h2></header>
-            <div class="modal-body">
-             <a class="wb-lbx" href="images/rppdpsp.JPG" title="RPP or DPSP">
-                        <img src="images/rppdpsp.JPG" alt="RPP or DPSP" class="img-responsive mrgn-bttm-lg" />
-                        </a>
-             </div>
-            </section>  
-
- <section id="codesother" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
-            <header class="modal-header"><h2 class="modal-title">View sample - Codes - Other information</h2></header>
-            <div class="modal-body">
-
-      
-             </div>
             </section>  
 
 
