--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1548,7 +1548,7 @@
 	<ul>
 		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-1", "live": true}'>Self-employed fisher</li>
       <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-2", "live": true}'>Self-employed hairdresser</li>
-      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3", "live": true}'>Placement or employment agency workers</li>
+      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3", "live": true}'>Placement or employment agency worker paid by the agency's client</li>
       <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-4", "live": true}'>Prescribed salary deferral arrangement </li>
       <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-5", "live": true}'>Employee who is registered, or entitled to be registered under the Indian Act</li>
       <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-6", "live": true}'>Self-employed person who is registered, or entitled to be registered under the Indian Act</li>
@@ -1570,16 +1570,16 @@
  	<div id="ajax-2" class="hidden">
               <h3>Self-employed hairdresser</h3>
 		<br>
-                <a class="wb-lbx" href="images/T4_Hairdresser.JPG" title="Identification">
-                        <img src="images/T4_Hairdresser.JPG" alt="Identification" class="img-responsive mrgn-bttm-lg" />
+                <a class="wb-lbx" href="images/T4_Hairdresser.JPG" title="Self-employed hairdresser">
+                        <img src="images/T4_Hairdresser.JPG" alt="Self-employed hairdresser" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
 <div id="ajax-3" class="hidden">
-              <h3>Placement or employment agency worker</h3>
+              <h3>Placement or employment agency worker paid by the agency's client</h3>
 	<br>
-                <a class="wb-lbx" href="images/T4_Agency.JPG" title="Placement or employment agency worker">
-                        <img src="images/T4_Agency.JPG" alt="Placement or employment agency worker" class="img-responsive mrgn-bttm-lg" />
+                <a class="wb-lbx" href="images/T4_Agency.JPG" title="Placement or employment agency worker paid by the agency's client">
+                        <img src="images/T4_Agency.JPG" alt="Placement or employment agency worker paid by the agency's client" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
 
