--- a/payroll/calculate/payment/fees-other.html
+++ b/payroll/calculate/payment/fees-other.html
@@ -342,7 +342,7 @@
                      <ul class="fa-ul mrgn-bttm-lg">
                          <li><span class="fas fa-check fa-li text-success"></span> Tangible and movable property (for example: clothing, office equipment, machinery, tools, supplies)</li>
                          <li><span class="fas fa-check fa-li text-success"></span> Merchandise manufactured or produced for sale </li>
-			 <li><span class="fas fa-check fa-li text-success"></span> Articles of trade and commerce (for example: the item is made to be used in a production process and is <strong>not</strong> the finished product)</li>
+			 <li><span class="fas fa-check fa-li text-success"></span> Articles of trade and commerce </li>
 			 
                      </ul>
                    
