--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -279,7 +279,7 @@
 
             <h2 id="h-4">How to fill out</h2>
           <p><strong>Before you fill out the T4 slip, </strong>make sure to review the list of <a href="#special" aria-controls="centred-popup" class="wb-lbx" role="button">special situation&nbsp;<span class="far fa-question-circle"></span></a>.  You can filter by key words to find information specific to your situation.</p> 
-<p> &nbsp;&nbsp; <a href="#ident" aria-controls="mid-screen" class="overlay-lnk" role="button"><span class="fas fa-eye text-muted"> </span> View examples of completed T4 slips in special situations</a></p> 
+<p> &nbsp;&nbsp; <a href="#ident" aria-controls="mid-screen" class="overlay-lnk" role="button"><span class="fas fa-eye text-muted"> </span> View examples of completed T4 slips in regular and special situations</a></p> 
 
          
               <section class="mrgn-tp-md" id="details-elements">
@@ -1535,7 +1535,7 @@
  <section id="ident" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
 
                <header class="modal-header">
-                  <h2 class="modal-title">View examples of completed T4 slips in special situations</h2>
+                  <h2 class="modal-title">View examples of completed T4 slips in regular and special situations</h2>
                </header>
  
             <div class="modal-body">
@@ -1544,14 +1544,17 @@
             <form>
 
 <div class="wb-fieldflow" data-wb-fieldflow='{"noForm": true, "isoptional": true}'>
-	<p>What is the special situation?</p>
+	<p>What is the situation?</p>
 	<ul>
-		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-1", "live": true}'>Self-employed fisher</li>
+    <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-7", "live": true}'>Employee with CPP contributions - Slip filed for calendar year 2023</li>
+     <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-8", "live": true}'>Employee with CPP and CPP2 contributions - Slip filed for calendar year 2024</li>	
+      <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-1", "live": true}'>Self-employed fisher</li>
       <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-2", "live": true}'>Self-employed hairdresser</li>
       <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-3", "live": true}'>Placement or employment agency worker paid by the agency's client</li>
       <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-4", "live": true}'>Prescribed salary deferral arrangement </li>
       <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-5", "live": true}'>Employee who is registered, or entitled to be registered under the Indian Act</li>
       <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-6", "live": true}'>Self-employed person who is registered, or entitled to be registered under the Indian Act</li>
+   
       
 	</ul>
 </div>
@@ -1559,6 +1562,22 @@
           </div>
 
 <div id="results" class="mrgn-tp-lg" aria-live="polite">
+
+  <div id="ajax-7" class="hidden">
+              <h3>Employee with CPP contributions - Slip filed for calendar year 2023</h3>
+		    <br>
+                <a class="wb-lbx" href="images/T4_2023_CPP.JPG" title="Employee with CPP contributions - Slip filed for calendar year 2023">
+                        <img src="images/T4_2023_CPP.JPG.JPG" alt="Employee with CPP contributions - Slip filed for calendar year 2023" class="img-responsive mrgn-bttm-lg" />
+                        </a>
+            </div>
+  <div id="ajax-8" class="hidden">
+              <h3>Employee with CPP and CPP2 contributions - Slip filed for calendar year 2024</h3>
+		    <br>
+                <a class="wb-lbx" href="images/T4_2024_CPP_CPP2.JPG" title="Employee with CPP and CPP2 contributions - Slip filed for calendar year 2024">
+                        <img src="images/T4_2024_CPP_CPP2.JPG" alt="Employee with CPP and CPP2 contributions - Slip filed for calendar year 2024" class="img-responsive mrgn-bttm-lg" />
+                        </a>
+            </div>
+
             <div id="ajax-1" class="hidden">
               <h3>Self-employed fisher</h3>
 		    <br>
