--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1567,7 +1567,7 @@
               <h3>Employee with CPP contributions - Slip filed for calendar year 2023</h3>
 		    <br>
                 <a class="wb-lbx" href="images/T4_2023_CPP.JPG" title="Employee with CPP contributions - Slip filed for calendar year 2023">
-                        <img src="images/T4_2023_CPP.JPG.JPG" alt="Employee with CPP contributions - Slip filed for calendar year 2023" class="img-responsive mrgn-bttm-lg" />
+                        <img src="images/T4_2023_CPP.JPG" alt="Employee with CPP contributions - Slip filed for calendar year 2023" class="img-responsive mrgn-bttm-lg" />
                         </a>
             </div>
   <div id="ajax-8" class="hidden">
