--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1535,7 +1535,7 @@
  <section id="ident" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
 
                <header class="modal-header">
-                  <h2 class="modal-title">View examples of completed T4 slips in regular and special situations</h2>
+                  <h2 class="modal-title">Examples of completed T4 slips in regular and special situations</h2>
                </header>
  
             <div class="modal-body">
@@ -1571,7 +1571,7 @@
                         </a>
             </div>
   <div id="ajax-8" class="hidden">
-              <h3>Employee with CPP and CPP2 contributions - Slip filed for calendar year 2024 <span class="label label-info">Estimated figure</span></h3>
+              <h3>Employee with CPP and CPP2 contributions - Slip filed for calendar year 2024 <span class="label label-info">Estimated figures</span></h3>
 		    <br>
                 <a class="wb-lbx" href="images/T4_2024_CPP_CPP2.JPG" title="Employee with CPP and CPP2 contributions - Slip filed for calendar year 2024">
                         <img src="images/T4_2024_CPP_CPP2.JPG" alt="Employee with CPP and CPP2 contributions - Slip filed for calendar year 2024" class="img-responsive mrgn-bttm-lg" />
