--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -317,7 +317,7 @@
                         </tr>
 			                        
 			<tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/payments-made-after-death.html">Employee who dies</a>  </td>
+                           <td><a href="employee-deceased.html">Employee who dies</a>  </td>
                            <td>Employee situation </td>
                         </tr>
 			<tr>
@@ -325,7 +325,7 @@
                            <td>Employee situation </td>
                         </tr>
       			  <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/employment-insurance-ei/hiring-a-family-member-a-related-person.html">Employee who is hired as a family member or a related person</a> <br /> </td>
+                           <td><a href="employee-family.html">Employee who is hired as a family member or a related person</a> <br /> </td>
                            <td>Employee situation
                               
                            </td>
