--- a/subway/uht/index.html
+++ b/subway/uht/index.html
@@ -955,20 +955,22 @@ input[type='radio'] {
         <div class="row">
             <div class="col-md-8">
 
-                <p>The Underused Housing Tax is an annual 1% tax on the ownership of vacant or underused housing in Canada that took effect on January 1, 2022.</p>
-		    <p>The tax generally applies to non-resident, non-Canadian owners of housing in Canada. However, in some situations, this tax also applies to some Canadian owners (such as certain partners, trustees, and corporations).
-                </p>
+                <p>The Underused Housing Tax is an annual federal 1% tax on the ownership of vacant or underused housing in Canada that took effect on January 1, 2022.</p>
+		    <p>The tax generally applies to non-resident, non-Canadian owners of housing in Canada. However, in some situations, this tax also applies to some Canadian owners (such as certain partners, trustees, and corporations).</p>
+		    <p>You may have heard about a new vacancy tax in Ontario, and some cities within Ontario have already implemented the new tax. British Columbia also has a vacancy tax in some regions.</p>
+		    <p>Those vacancy taxes have been implemented by the <strong>provincial</strong> governments of Ontario and British Columbia, and are different than the <strong>federal</strong> Underused Housing Tax.</p>
+		    <p>You must determine if you are affected by each of these taxes separately. If you are excluded from one tax, you may still be required to file a return and pay the other tax.</p>
             
 
                 
-<p><strong>[Content about vacancy tax?]</strong></p>
+
 
                 <section>
                     <nav aria-label="Section menu">
                         <h2>Sections</h2>
                         <ul class="gc-navseq">
                             <li><a href="who-file.html">Who must file a return and pay the tax</a><br>
-                                [Details]
+                                Includes an interactive tool to help you decide if you are affected
                             </li>
 				<li><a href="when-file.html">When to file the return and pay the tax</a><br>
                                 [Details]
