--- a/subway/uht/index.html
+++ b/subway/uht/index.html
@@ -973,20 +973,20 @@ input[type='radio'] {
                                 Includes an interactive tool to help you decide if you are affected
                             </li>
 				<li><a href="when-file.html">When to file the return and pay the tax</a><br>
-                                [Details]
+                                Due date, exception for 2022
                             </li>
                             <li><a href="complete-return.html">Complete the return</a><br>
-                                [Details]
+                               How to fill out the return
                             </li>
 				
                             <li><a href="file-return.html">File the return</a><br>
-                                [Details]
+                               Where to send the return
                             </li>
                             <li><a href="pay-tax.html">Pay the tax</a><br>
-                                [Details]
+                                Payment methods for individuals and corporations
                             </li>
                             <li><a href="contact.html">Contact us</a><br>
-                                [Details]
+                                If you have questions about the Underused Housing Tax
                             </li>
                           
                         </ul>
