--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -273,11 +273,11 @@
                            <td>Type of employment </td>
                         </tr>
                          <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-situations/employing-a-caregiver-baby-sitter-domestic-worker.html">Payments to caregivers, baby-sitters and domestic workers</a> <br /> </td>
+                           <td><a href="caregivers.html">Payments to caregivers, baby-sitters and domestic workers</a> <br /> </td>
                            <td>Type of employment </td>
                         </tr>
                         <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-situations/emergency-volunteers.html">Payments to emergency services volunteers</a> </td>
+                           <td><a href="emergency.html">Payments to emergency services volunteers</a> </td>
                            <td>Type of employment </td>
                         </tr>
                         <tr>
