--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -290,7 +290,7 @@
                         </tr>
   			
 			   <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-situations/employees-power-saws-tree-trimmers.html">Payments to forestry workers for power saws or tree trimmers </a> <br /> </td>
+                           <td><a href="forestry.html">Payments to forestry workers for power saws or tree trimmers </a> <br /> </td>
                            <td>Type of employment </td>
                         </tr>
                          
