--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -362,7 +362,7 @@
                         </tr>
                  
                         <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/employment-insurance-ei/reduce-ei-premium-rate-you-provide-your-employees-a-short-term-disability-plan.html">Employer who provides a wage-loss replacement plan for short-term disability (reduced EI premium rate)</a> <br /> </td>
+                           <td><a href="employer-wlrp-premium.html">Employer who provides a wage-loss replacement plan for short-term disability (reduced EI premium rate)</a> <br /> </td>
                            <td>Employer situation </td>
                         </tr>
                        
