--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -344,7 +344,7 @@
 
                       
                         <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-overview/life-events-employees/parental-leave.html">Employee who is on parental leave</a> </td>
+                           <td><a href="employee-parental.html">Employee who is on parental leave</a> </td>
                            <td>Employee situation </td>
                         </tr>
 						<tr>
