--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -338,7 +338,7 @@
 
 
                  <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-overview/life-events-employees/what-should-you-employee-leaves.html">Employee who is leaving</a> </td>
+                           <td><a href="employee-leaving.html">Employee who is leaving</a> </td>
                            <td>Employee situation </td>
                         </tr>
 
