--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -246,7 +246,7 @@
                            <td>Type of remuneration </td>
                         </tr>
 	    		<tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/tips-gratuities.html">Tips and gratuities </a> </td>
+                           <td><a href="tips.html">Payments related to tips </a> </td>
                            <td>Type of remuneration </td>
                         </tr>
                         <tr>
