--- a/payroll/calculate/payment/template-payment.html
+++ b/payroll/calculate/payment/template-payment.html
@@ -161,6 +161,16 @@
 <a href="retire-allowance.html#gc-document-nav" class="visible-xs visible-sm"> Payments of retiring allowances
 </a></li>
 
+<li><a href="elected-officials.html" class="hidden-xs hidden-sm"> Payments of stipends, fees or remuneration related to tenure of office (elected or appointed officials)
+ </a>
+<a href="elected-officials.html#gc-document-nav" class="visible-xs visible-sm"> Payments of stipends, fees or remuneration related to tenure of office (elected or appointed officials)
+</a></li>
+
+<li><a href="tips.html" class="hidden-xs hidden-sm"> Payments of tips
+ </a>
+<a href="tips.html#gc-document-nav" class="visible-xs visible-sm"> Payments of tips
+</a></li>
+
 <li><a href="terminate-notice.html" class="hidden-xs hidden-sm"> Payments of wages in lieu of termination notice
 </a>
 <a href="terminate-notice.html#gc-document-nav" class="visible-xs visible-sm"> Payments of wages in lieu of termination notice
@@ -178,10 +188,7 @@
  </a>
 <a href="deferral.html#gc-document-nav" class="visible-xs visible-sm"> Payments related to salary deferral arrangements
 </a></li>
-<li><a href="elected-officials.html" class="hidden-xs hidden-sm"> Payments of stipends, fees or remuneration related to tenure of office (elected or appointed officials)
- </a>
-<a href="elected-officials.html#gc-document-nav" class="visible-xs visible-sm"> Payments of stipends, fees or remuneration related to tenure of office (elected or appointed officials)
-</a></li>
+	
 <li><a href="wcb.html" class="hidden-xs hidden-sm"> Payments related to workers' compensation claims </a>
 <a href="wcb.html#gc-document-nav" class="visible-xs visible-sm">Payments related to workers' compensation claims</a></li>
 
@@ -242,10 +249,7 @@
 </a></li>
 <li><a href="/cra-arc/payroll/calculate/benefit/index.html.html" class="hidden-xs hidden-sm"> Taxable benefits </a>
 <a href="/cra-arc/payroll/calculate/benefit/index.html.html#gc-document-nav" class="visible-xs visible-sm">Taxable benefit</a></li>
-<li><a href="tips.html" class="hidden-xs hidden-sm"> Tips and gratuities
- </a>
-<a href="tips.html#gc-document-nav" class="visible-xs visible-sm"> Tips and gratuities
-</a></li>
+
 <li><a href="vacation.html" class="hidden-xs hidden-sm"> Vacation pay and public holidays payments
  </a>
 <a href="vacation.html#gc-document-nav" class="visible-xs visible-sm"> Vacation pay and public holidays payments
