--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -246,7 +246,7 @@
                            <td>Type of remuneration </td>
                         </tr>
 	    		<tr>
-                           <td><a href="tips.html">Payments related to tips </a> </td>
+                           <td><a href="tips.html">Payments of tips </a> </td>
                            <td>Type of remuneration </td>
                         </tr>
                         <tr>
