--- a/payroll/calculate/payment/tips.html
+++ b/payroll/calculate/payment/tips.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Payments related to tips - Calculate payroll deductions and contributions - Canada.ca</title>
+         <title>Payments of tips - Calculate payroll deductions and contributions - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -93,7 +93,7 @@
       </li>
 
  <li>
-	 <a href="tips.html" class="active" aria-current="page">Payments related to tips</a>
+	 <a href="tips.html" class="active" aria-current="page">Payments of tips</a>
 	</li>
  <li class="p-0">
 	<hr class="brdr-bttm mrgn-tp-0">
@@ -266,7 +266,7 @@
   </ul>
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Payments related to tips</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Payments of tips</h1>
 <p>Some content to be covered but very minimal: <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/tips-gratuities.html">Tips and gratuities</a> </p>
 <p class="small mrgn-bttm-sm"><strong>You may be looking for:</strong></p>
                   <ul class="small mrgn-tp-sm">
