--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -332,7 +332,7 @@
                            <td>Employee situation </td>
                         </tr>
                       <tr>
-                           <td><a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a> <span class="label label-warning">ABSB - Circulation</span> </td>
+                           <td><a href="indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a> <span class="label label-warning">ABSB - Circulation</span> </td>
                            <td>Employee situation </td>
                         </tr>
 
@@ -367,7 +367,7 @@
                         </tr>
                        
                         <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/information-been-moved/rendering-services-canada/non-resident-employer-certification.html">Employer who is a non-resident employer</a> <br /> </td>
+                           <td><a href="employer-nonres.html">Employer who is a non-resident employer</a> <br /> </td>
                            <td>Employer situation </td>
                         </tr>
 
