--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -318,7 +318,7 @@
                            <td>Employee situation </td>
                         </tr>
 			<tr>
-                           <td><a href=" ">Employee who is a non-resident</a>  </td>
+                           <td><a href="employee-nonres.html">Employee who is a non-resident</a>  </td>
                            <td>Employee situation </td>
                         </tr>
       			  <tr>
