--- a/payroll/calculate/payment/employer-nonres.html
+++ b/payroll/calculate/payment/employer-nonres.html
@@ -273,7 +273,7 @@
 </nav>
 
 <h1 property="name" id="wb-cont" class="gc-thickline">Employer who is a non-resident employer</h1>
-<p>Some content to be covered but very minimal with redirect to this page: <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/information-been-moved/rendering-services-canada/non-resident-employer-certification.html">Non-resident employer certification</a> </p>
+<p>Some content to be covered but very minimal with redirect to this page: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/income-tax/non-resident-employees-who-perform-services-canada.html">Employment in Canada by certified non-resident employers</a> </p>
 <p class="small mrgn-bttm-sm"><strong>You may be looking for:</strong></p>
                   <ul class="small mrgn-tp-sm">
                      <li><a href="">Add if necessary</a></li>
