--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -761,6 +761,8 @@ html:lang(fr) .cnjnctn-or:before {
     </nav>
   </section>
   <section class="gc-nav-section experimental provisional">
+
+	  
     <h1 property="name" id="wb-cont">Who must file a return and pay the tax</h1>
     <p>You must file an Underused Housing Tax return for <strong>each</strong> of your properties in Canada if <strong>all of the following</strong> conditions are met on <span class="nowrap">December 31</span>:</p>
     <ul class="cnjnctn-type-and cnjnctn-sm">
@@ -776,13 +778,22 @@ html:lang(fr) .cnjnctn-or:before {
     </ul>
     <details class="mrgn-tp-lg">
       <summary class="mrgn-tp-md">What is a residential property</summary>
-      <p>Generally, residential property is defined as property that is either of the following:</p>
-      <ul>
-        <li>A detached house or similar building that contains a maximum of 3 dwelling units, including the related land</li>
-        <li>A semi-detached house, rowhouse unit, or condominium, including the related land</li>
-      </ul>
-      <p>For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681148">Residential property</a></p>
+      <p>Generally, residential property is defined as property that is either:</p>
+
+
+  <ul class="cnjnctn-type-or cnjnctn-sm">
+      <li class="cnjnctn-col">
+        <p>A detached house or similar building that contains a maximum of 3 dwelling units, including the related land</p>
+      </li>
+      <li class="cnjnctn-col">
+        <p>A semi-detached house, rowhouse unit, or condominium, including the related land</p>
+      </li>
+  </ul>
+   
+      <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681148">Residential property</a></p>
     </details>
+
+	  
     <details>
       <summary>Who is considered an owner</summary>
       <p>You are an owner of a residential property if you are any of the following:</p>
