clean 1st section

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -796,20 +796,21 @@ html:lang(fr) .cnjnctn-or:before {
 	  
     <details>
       <summary>Who is considered an owner</summary>
-      <p>You are an owner of a residential property if you are any of the following:</p>
+      <p>You are an owner of a residential property if any of these statements are true.</p>
+	    <p>You are:</p>
       <ul>
         <li>Identified and considered as an owner of the property in the land registration system where the property is located</li>
         <li>A life tenant under a life estate in the property</li>
         <li>A life lease holder of the property</li>
         <li>A lessee that has continuous possession of the land on which the property is situated under a long-term lease</li>
       </ul>
-      <p>For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681153">Owner of residential property</a></p>
+      <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681153">Owner of residential property</a></p>
     </details>
     <br>
-    <p>In most situations, <strong>affected owners</strong> must also pay the tax for each residential property they own, unless they qualify for an exemption. If an affected owner qualifies for an exemption, they must indicate the applicable exemption within their return(s), and will not have to pay the tax.
-    <p>
+    <p>In most situations, if you are an <strong>affected owner</strong>, you must also pay the tax for each residential property you own, unless you qualify for an exemption.</p>
+	  <p>If you qualify for an exemption, you must select the exemption on your return(s). If you qualify for an exemption, you will not have to pay the tax.</p>
     <p>If you share ownership with one or more co-owners who are also affected owners, <strong>each</strong> of you must file a separate return for the property, even if your respective ownership qualifies for an exemption.</p>
-    <p>If you are not an affected owner, we refer to you as an <strong>excluded owner</strong>. Only excluded owners do not have to file a return or pay the tax. </p>
+    <p>If you are not an affected owner, you are an <strong>excluded owner</strong>. Excluded owners do not have to file a return or pay the tax. </p>
     <h2>Determine if you are an affected owner or an excluded owner</h2>
     <p>Find out which type of owner you are based on your situation, and if you may qualify for an exemption from paying the tax.</p>
     <div class="wb-tabs mrgn-tp-lg">
