--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -661,7 +661,7 @@
 <h3 class="modal-title">Qualifying individual</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualindividual"></section>
+<section data-ajax-replace="definitions.html#qualindividual"></section>
 </div>
 </section>
 
