--- a/subway/uht/contact.html
+++ b/subway/uht/contact.html
@@ -835,20 +835,20 @@ margin-left: 38px;
                     <ul>
                       <li>An individual
                         <div class="wb-fieldflow-sub" data-wb-fieldflow='{"noForm": true, "isoptional": true, "gcChckbxrdio":true,  "renderas":"radio", "reset": {"action": "addClass", "source": "#results, .ff-uht-ind, .ff-uht-bus, .ff-uht-elec-form-na, .ff-uht-elec-form-intl, .ff-uht-ind-gen-na, .ff-uht-ind-gen-intl, .ff-uht-bus-gen-na, .ff-uht-bus-gen-intl", "class": "hidden", "live": true}}'>
-                          <p>What is your question?</p>
+                          <p>Is your question about the online Underused Housing Tax return and election form?</p>
                           <ul>
-                            <li>I have a question about the UHT return and election form
+                            <li>Yes
                               <div class="wb-fieldflow-sub" data-wb-fieldflow='{"noForm": true, "isoptional": true, "gcChckbxrdio":true,  "renderas":"radio", "reset": {"action": "addClass", "source": "#results, .ff-uht-ind, .ff-uht-bus, .ff-uht-elec-form-na, .ff-uht-elec-form-intl, .ff-uht-ind-gen-na, .ff-uht-ind-gen-intl, .ff-uht-bus-gen-na, .ff-uht-bus-gen-intl", "class": "hidden", "live": true}}'>
-                                <p>Will you be calling from Canada or the United States?</p>
+                                <p>Are you calling from either Canada or the United States?</p>
                                 <ul>
                                   <li data-wb-fieldflow='{"action": "removeClass", "source": "#results, .ff-uht-ind, .ff-uht-elec-form-na", "class": "hidden", "live": true}'>Yes</li>
                                   <li data-wb-fieldflow='{"action": "removeClass", "source": "#results, .ff-uht-ind, .ff-uht-elec-form-intl", "class": "hidden", "live": true}'>No</li>
                                 </ul>
                               </div>
                             </li>
-                            <li>I have a question about another topic for UHT
+                            <li>No
 							  <div class="wb-fieldflow-sub" data-wb-fieldflow='{"noForm": true, "isoptional": true, "gcChckbxrdio":true,  "renderas":"radio", "reset": {"action": "addClass", "source": "#results, .ff-uht-ind, .ff-uht-bus, .ff-uht-elec-form-na, .ff-uht-elec-form-intl, .ff-uht-ind-gen-na, .ff-uht-ind-gen-intl, .ff-uht-bus-gen-na, .ff-uht-bus-gen-intl", "class": "hidden", "live": true}}'>
-                                <p>Will you be calling from Canada or the United States?</p>
+                                <p>Are you calling from either Canada or the United States?</p>
                                 <ul>
                                   <li data-wb-fieldflow='{"action": "removeClass", "source": "#results, .ff-uht-ind, .ff-uht-ind-gen-na", "class": "hidden", "live": true}'>Yes</li>
                                   <li data-wb-fieldflow='{"action": "removeClass", "source": "#results, .ff-uht-ind, .ff-uht-ind-gen-intl", "class": "hidden", "live": true}'>No</li>
@@ -861,20 +861,20 @@ margin-left: 38px;
                       </li>
                       <li>A corporation
                         <div class="wb-fieldflow-sub" data-wb-fieldflow='{"noForm": true, "isoptional": true, "gcChckbxrdio":true,  "renderas":"radio", "reset": {"action": "addClass", "source": "#results, .ff-uht-ind, .ff-uht-bus, .ff-uht-elec-form-na, .ff-uht-elec-form-intl, .ff-uht-ind-gen-na, .ff-uht-ind-gen-intl, .ff-uht-bus-gen-na, .ff-uht-bus-gen-intl", "class": "hidden", "live": true}}'>
-                          <p>What is your question?</p>
+                          <p>Is your question about the online Underused Housing Tax return and election form?</p>
                           <ul>
-                            <li>I have a question about the UHT return and election form
+                            <li>Yes
                               <div class="wb-fieldflow-sub" data-wb-fieldflow='{"noForm": true, "isoptional": true, "gcChckbxrdio":true,  "renderas":"radio", "reset": {"action": "addClass", "source": "#results, .ff-uht-ind, .ff-uht-bus, .ff-uht-elec-form-na, .ff-uht-elec-form-intl, .ff-uht-ind-gen-na, .ff-uht-ind-gen-intl, .ff-uht-bus-gen-na, .ff-uht-bus-gen-intl", "class": "hidden", "live": true}}'>
-                                <p>Will you be calling from Canada or the United States?</p>
+                                <p>Are you calling from either Canada or the United States?</p>
                                 <ul>
                                     <li data-wb-fieldflow='{"action": "removeClass", "source": "#results, .ff-uht-bus, .ff-uht-elec-form-na", "class": "hidden", "live": true}'>Yes</li>
                                   <li data-wb-fieldflow='{"action": "removeClass", "source": "#results, .ff-uht-bus, .ff-uht-elec-form-intl", "class": "hidden", "live": true}'>No</li>
                                 </ul>
                               </div>
                             </li>
-                            <li>I have a question about another topic for UHT
+                            <li>No
 							  <div class="wb-fieldflow-sub" data-wb-fieldflow='{"noForm": true, "isoptional": true, "gcChckbxrdio":true,  "renderas":"radio", "reset": {"action": "addClass", "source": "#results, .ff-uht-ind, .ff-uht-bus, .ff-uht-elec-form-na, .ff-uht-elec-form-intl, .ff-uht-ind-gen-na, .ff-uht-ind-gen-intl, .ff-uht-bus-gen-na, .ff-uht-bus-gen-intl", "class": "hidden", "live": true}}'>
-                                <p>Will you be calling from Canada or the United States?</p>
+                                <p>Are you calling from either Canada or the United States?</p>
                                 <ul>
                                   <li data-wb-fieldflow='{"action": "removeClass", "source": "#results, .ff-uht-bus, .ff-uht-bus-gen-na", "class": "hidden", "live": true}'>Yes</li>
                                   <li data-wb-fieldflow='{"action": "removeClass", "source": "#results, .ff-uht-bus, .ff-uht-bus-gen-intl", "class": "hidden", "live": true}'>No</li>
@@ -995,7 +995,7 @@ margin-left: 38px;
                   <dd>
                     <table class="table brdr-bttm">
                       <caption class="wb-inv">
-                      Underused Housing Tax enquiries hours
+                      General enquiries for businesses hours
                       </caption>
                       <thead>
                         <tr>
