--- a/subway/uht/pay-tax.html
+++ b/subway/uht/pay-tax.html
@@ -868,7 +868,7 @@ margin-left: 38px;
 
 	
 				<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-  <li class="cnjnctn-col-60">
+  <li class="cnjnctn-col">
     <p>If you have mailed your return and have received a Notice of Assessment with an amount owing</p>
   </li>
   <li class="cnjnctn-col">
