--- a/sred/scientific-research-experimental-development-tax-incentive-program/what-are.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/what-are.html
@@ -103,10 +103,13 @@
 	
 <h2 id="h1">How your business can benefit</h2>
 <p>If your business is engaged in scientific research and experimental development (SR&amp;ED), you may be able to earn tax incentives that reduce your income tax payable.</p>
-<p>Corporations, individuals, trusts, and partners in a partnership who conduct SR&amp;ED work in Canada may be able to:</p>
+<p>Corporations, individuals, trusts, and partnerships that conduct SR&amp;ED work in Canada may be able to:</p>
 <ul>
   <li>Claim a deduction against income </li>
-  <li>Earn an investment tax credit (ITC) </li>
+  <li>Earn an investment tax credit (ITC)that they can apply against their income tax payable</li>
+  <ul><li>Partnerships allocate the ITC earned to their eligible partners</li>
+  </ul>
+  
 </ul>
 
 <h3>Claim a deduction against income</h3>
