link to by mail contact

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1106,7 +1106,7 @@ html:lang(fr) .cnjnctn-or:before {
       </div>
     </div>
 
-  <p>If you are uncertain about your obligations and liabilities under the Underused Housing Tax Act (UHTA), you may <mark>request a ruling or interpretation</mark> about how the tax applies to your specific situation.</p>
+  <p>If you are uncertain about your obligations and liabilities under the Underused Housing Tax Act (UHTA), you may <a href="https://test.canada.ca/cra-arc/subway/uht/contact.html#bymail">request a ruling or interpretation</a> about how the tax applies to your specific situation.</p>
 
 	  
     <h2>Resources</h2>
